--- a/app/src/main/res/xml/data_extraction_rules.xml
+++ b/app/src/main/res/xml/data_extraction_rules.xml
@@ -1,4 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?><!--
+  ~ Copyright Notice for Soundboardz
+  ~ Copyright (c) at Carina Sophie Schoppe 2023
+  ~ File created on 3/24/23, 11:54 PM by Carina The Latest changes made by Carina on 3/23/23, 12:41 AM All contents of "data_extraction_rules.xml" are protected by copyright. The copyright law, unless expressly indicated otherwise, is
+  ~ at Carina Sophie Schoppe. All rights reserved
+  ~ Any type of duplication, distribution, rental, sale, award,
+  ~ Public accessibility or other use
+  ~ requires the express written consent of Carina Sophie Schoppe.
+  -->
+
+<!--
    Sample data extraction rules file; uncomment and customize as necessary.
    See https://developer.android.com/about/versions/12/backup-restore#xml-changes
    for details.
